--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 /* 开头 */
 body {
     font-family: Helvetica, Arial, sans-serif;
-    width: 100%;
-    height: 100%;
-    background: url(image/bgimg3.png) center no-repeat fixed;
-    background-size:100% 100%;
+    width: 125%;
+    height: auto;
+    background: url(image/bgimg3.png) center repeat-y fixed;
+    background-size: 100%;
 }
 
 header {
